# StringFilter

./: README.md  randstr.py
includes/: node.hpp  tree.hpp
multithread/includes/: tree.hpp
multithread/src/: main.cpp  node.cpp  tree.cpp
resources/: words.txt
single/: CMakeLists.txt
single/includes/: node.hpp  tree.hpp
single/src/: main.cpp  main.xcpp  tree.cpp
src/: main.cpp  node.cpp  tree.cpp
tests/: meas_exex_time.cpp  words.txt
