CMAKE_MINIMUM_REQUIRED (VERSION 3.5)
PROJECT (StringFilter)

SET (CMAKE_CXX_STANDARD 11)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CMAKE_BUILD_TYPE Debug)

# Set output folders
SET (CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
SET (EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR})
SET (LIBRAY_OUTPUT_PATH ${CMAKE_SOURCE_DIR})

# Find pthread library
FIND_PACKAGE(Threads REQUIRED)

FIND_PACKAGE( Boost 1.40 COMPONENTS program_options REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )

# Find source files
FILE(
    GLOB 
    SOURCES 
    src/*.cpp
)

# Include header files
INCLUDE_DIRECTORIES(includes)

ADD_EXECUTABLE (${PROJECT_NAME} ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})